# sudoManager

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: PR-main.yml
cmake/: UpdateSubmodules.cmake
include/sudoManager/: Bill.hpp  Item.hpp  Menu.hpp  Payment.hpp  Table.hpp  TableSeat.hpp  version.hpp
src/: Bill.cpp  CMakeLists.txt  Item.cpp  Item.hpp  Menu.cpp  Payment.cpp  Table.cpp  TableSeat.cpp
tests/: CMakeLists.txt  test_bluey.cpp  test_table.cpp
